Angular services and routing

--- a/Angular/my-app/src/app/app.component.html
+++ b/Angular/my-app/src/app/app.component.html
@@ -8,3 +8,4 @@
 <toggle (switchToggle)="changeLanguage()"></toggle>
 <menu [language]="languageSelected"></menu>
 <router-outlet />
+<h1>FOOTER</h1>
