--- a/Angular/my-app/src/app/components/menu/menu.component.html
+++ b/Angular/my-app/src/app/components/menu/menu.component.html
@@ -2,8 +2,8 @@
     <img src="../../../assets/logo.png" class="logo">
     <nav class="menu">
         <div class="site-nav">
-            <a (click)="goToArticle()">{{articleMenuText}}</a>
-            <a (click)="goToBlog()">{{blogMenuText}}</a>
+            <a routerLink="first-component">{{articleMenuText}}</a>
+            <a routerLink="second-component">{{blogMenuText}}</a>
             <a (click)="goToNews()">{{newsMenuText}}</a>
         </div>
         <a (click)="goToAccount()" class="account-btn">{{accountMenuText}}</a>
